fix: add proper OG meta tags for link preview

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <meta property="og:title" content="NovaLanding — Modern SaaS Landing" />
   <meta property="og:description" content="Production-grade, fast and accessible landing template." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://your-domain.com/og.png" />
+  <meta property="og:image" content="https://novalandingui.vercel.app/og.png" />
   <meta property="og:url" content="https://novalandingui.vercel.app" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="NovaLanding — Modern SaaS Landing" />
   <meta name="twitter:description" content="Production-grade, fast and accessible landing template." />
-  <meta name="twitter:image" content="https://your-domain.com/og.png" />
+  <meta name="twitter:image" content="https://novalandingui.vercel.app/og.png" />
 </head>
 
 <body>
